SignUp component on front end is ready to be connected to the api. User controller up next

--- a/recipe-book-frontend/src/components/Home/styling/Homepage.css
+++ b/recipe-book-frontend/src/components/Home/styling/Homepage.css
@@ -25,6 +25,8 @@
 .wrapper form{
     display: flex;
     justify-content: space-between;
+    text-align: center;
+
     flex-wrap: wrap;
     max-width: 1vmax;
 }
