--- a/recipe-book-frontend/src/components/Recipe/recipe_styling/recipe.css
+++ b/recipe-book-frontend/src/components/Recipe/recipe_styling/recipe.css
@@ -6,7 +6,8 @@
 }
 
 .recipe-container-header{
-
+    font-size: 36px;
+    font-weight: bolder;
 }
 
 .recipe-deck{
@@ -15,23 +16,30 @@
     flex-wrap: wrap;
 }
 
-.recipe-deck-wrapper{
-    /* display: flex;
-    flex-direction: row;
-    justify-content: space-around; */
-}
-
 body{
     background-color: lightyellow;
+    font-family: 'Trebuchet MS';
 }
 
 .recipe-card{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
 }
 
 .recipe-card:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+p#name{
+    color: black;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+p#desc{
+    color: black;
+    border: dashed;
+    height: 180px;
 }
